--- a/project/templates/class.html.twig
+++ b/project/templates/class.html.twig
@@ -11,7 +11,7 @@
     <div id="centerArticle">
         <h1 class="centered">{{a.classname}}</h1>
         <hr>
-        <i>Posted by {{a.username}}</i>  
+        <i>Posted by <a href="/profile/{{a.userid}}">{{a.username}}</a></i>
         <hr>
         <div class="body">{{a.body|raw}}</div>
         <hr>
