--- a/project/templates/index.html.twig
+++ b/project/templates/index.html.twig
@@ -4,11 +4,11 @@
 
 {% block content %}
     {% for c in list %}
-    <div id="class">
+    <div class="class">
         <h1><a href="/class/{{c.classid}}">{{c.classname}}</a></h1>
         <span>Created by <a href="/profile/{{c.userid}}">{{c.username}}</a></span>
         <p>{{c.body}}</p>
     </div>
-    </br>
+    <br>
     {% endfor %}
 {% endblock %}
