Updates to correct class issues

--- a/project/templates/addclass_success.html.twig
+++ b/project/templates/addclass_success.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
     {% for c in list %}
-    <div id="">
+    <div class="class">
         <p>Class Added:</p>
         <h1><a href="/class/{{c.classid}}">{{c.name}}</a></h1>
         <p>{{c.body}}</p>
