--- a/project/templates/create_class.html.twig
+++ b/project/templates/create_class.html.twig
@@ -28,7 +28,7 @@
             <option value="Winter">Winter</option>
         </select></p>
         <p><label for="year"><strong>Year:</strong></label>
-        <input type="number" value="{{c.year}}" name="year"></p>
+        <input type="number" value="{{c.year}}" name="year" placeholder="1990"></p>
         <p><label for="body"><strong>Class Description:</strong></label></p>
         <textarea name="body" cols="60" rows="10">{{c.body}}</textarea>
         <p><input type="submit" value="Add Class"></p>
