--- a/project/styles.css
+++ b/project/styles.css
@@ -2,10 +2,6 @@ body {
     background-color: black;
 }
 
-#logo {
-    background-color: black;
-}
-
 #header {
     margin-left: 17.5em;
     margin-bottom: 0.5em;
@@ -16,7 +12,7 @@ body {
 #header > ul{
     list-style-type: none;
     list-style-position: inside;
-    border: 4px solid black;
+    border: 1px solid black;
     color: black;
     height: 70px;
     padding: 0;
@@ -36,9 +32,11 @@ body {
 }
 
 #nav {
+    float: left;
     border: 4px solid black;
     border-radius: 30px;
-    position: absolute;
+    width: 250px;
+    position: sticky;
     left: 0;
     top: 0;
     background-color: goldenrod;
@@ -88,7 +86,7 @@ body {
 .class {
     border: 4px solid black;
     border-radius: 30px;
-    background-color: gold;
+    background-color: whitesmoke;
     margin: 0.5em;
     padding: 0.5em;
     width: auto;
@@ -114,6 +112,10 @@ body {
 h1 {
     text-align:center;
     margin-bottom: 0;
+}
+
+a {
+    color:black;
 }
 
 p {
