--- a/project/styles.css
+++ b/project/styles.css
@@ -1,11 +1,10 @@
 body {
-    background-color: black;
+    background-color: whitesmoke;
 }
 
 #header {
-    margin-left: 17.5em;
+    margin-left: auto;
     margin-bottom: 0.5em;
-    margin-right: 0.5em;
     padding: 0.5em 1em 0.5em 1em;
 }
 
@@ -14,32 +13,23 @@ body {
     list-style-position: inside;
     border: 1px solid black;
     color: black;
-    height: 70px;
+    height: 5em;
     padding: 0;
     margin: 0;
     border-radius: 30px;
-    background-color: whitesmoke;
-}
-
-#header > ul > li {
-    float: left;
-    margin: 1em;
-    padding: 0.5em;
-    border: 3px solid rgba(161, 120, 7, 0.76);
-    border-radius: 10px;
-    background-color: rgb(255, 247, 137);
-    color: black;
+    background-color: lightgoldenrodyellow;
+    box-shadow: 0 2px 2px black;
 }
 
 #nav {
     float: left;
-    border: 4px solid black;
+    border: 1px solid black;
     border-radius: 30px;
     width: 250px;
     position: sticky;
-    top: 5em;
-    background-color: goldenrod;
-    margin: 0.5em;
+    top: 4.5em;
+    background-color: lightgoldenrodyellow;
+    box-shadow: 0px 2px 2px black;
 }
 
 #menu {
@@ -52,43 +42,46 @@ body {
     list-style-position: inside;
     margin: 1em;
     padding: 0.5em;
-    border: 3px solid rgba(161, 120, 7, 0.76);
+    border: 3px solid black;
     border-radius: 10px;
-    background-color: rgb(255, 247, 137);
+    background-color: white;
     color: black;
 }
 
 #content {
-    border: 4px solid black;
+    border: 1px solid black;
     border-radius: 30px;
-    background-color: goldenrod;
+    background-color: lightgoldenrodyellow;
     width: auto;
     height: auto;
     margin-left: 17.5em;
     padding: 0.5em 1em 0.5em 1em;
+    box-shadow: inset 0 0 2px black;
 }
 
 #footer {
     clear: both;
-    border: 4px solid black;
+    border: 1px solid black;
     border-radius: 30px;
     margin-left: 17.5em;
-    background-color: goldenrod;
+    background-color: lightgoldenrodyellow;
     padding: 0.5em 0 0.5em 1em;
+    box-shadow: inset 0 0 2px black;
 }
 
 .body {
-    background-color: whitesmoke;
+    background-color: white;
     padding: 1em;
 }
 
 .class {
-    border: 4px solid black;
+    border: 1px solid black;
     border-radius: 30px;
-    background-color: whitesmoke;
+    background-color: white;
     margin: 0.5em;
     padding: 0.5em;
     width: auto;
+    box-shadow: 0px 2px 2px black;
 }
 
 .comments {
@@ -105,12 +98,17 @@ body {
     border: 2px solid black;
     margin: 0.5em;
     padding: 0.5em;
-    background-color: whitesmoke;
+    background-color: white;
 }
 
 h1 {
     text-align:center;
     margin-bottom: 0;
+}
+
+h2 {
+    text-align: left;
+    text-indent: 1.5em;
 }
 
 a {
@@ -149,9 +147,9 @@ CSS for user-related forms
     color: black;
     margin: 0.8em 0 0 0.5em;
     padding: 15px 20px;
-    border: 3px solid rgba(161, 120, 7, 0.76);
+    border: 3px solid black;
     border-radius: 10px;
-    background-color: rgb(255, 247, 137);
+    background-color: white;
 }
 /* 
 end of CSS for user-related forms 
