--- a/project/templates/login.html.twig
+++ b/project/templates/login.html.twig
@@ -6,7 +6,7 @@
     {% if error %}
         <p class="errorMessage">Invalid username or password. Try again or <a href="/register">register</a>.</p>
     {% endif %}
-
+    <h2>Login</h2>
     <form method="post" class="userForm">
         <label for="username">Username</label> 
         <input type="text" name="username">
@@ -15,4 +15,5 @@
         <input type="password" name="password">
         <input type="submit" value="Login">
     </form>
+    <p><a href="/register">No Account? Register Here</a></p>
 {% endblock %}
