--- a/project/styles.css
+++ b/project/styles.css
@@ -3,22 +3,12 @@ body {
 }
 
 #header {
-    margin-left: auto;
-    margin-bottom: 0.5em;
-    padding: 0.5em 1em 0.5em 1em;
-}
-
-#header > ul{
-    list-style-type: none;
-    list-style-position: inside;
     border: 1px solid black;
     color: black;
-    height: 5em;
-    padding: 0;
-    margin: 0;
     border-radius: 30px;
-    background-color: lightgoldenrodyellow;
+    background-color: white;
     box-shadow: 0 2px 2px black;
+    padding: 0.5em 1em 0.5em 1em;
 }
 
 #nav {
@@ -27,7 +17,8 @@ body {
     border-radius: 30px;
     width: 250px;
     position: sticky;
-    top: 4.5em;
+    top: 0.5em;
+    left: 1em;
     background-color: lightgoldenrodyellow;
     box-shadow: 0px 2px 2px black;
 }
@@ -46,6 +37,10 @@ body {
     border-radius: 10px;
     background-color: white;
     color: black;
+}
+
+#menu > li:hover {
+    background-color: #C8FFFF;
 }
 
 #content {
@@ -84,7 +79,12 @@ body {
     box-shadow: 0px 2px 2px black;
 }
 
+.class:hover {
+    background-color: #C8FFFF;
+}
+
 .comments {
+    clear: left;
     padding: 1em;
 }
 
@@ -101,14 +101,46 @@ body {
     background-color: white;
 }
 
+.lessonContainer {
+    float: left;
+    background: white;
+    border: 1px solid black;
+    box-shadow: 0px 2px 2px black;
+    padding: 0.5em;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+}
+
+.name {
+    margin-left: -0.5em;
+    margin-right: -0.5em;
+    border-bottom: 2px solid black;
+    text-align: right;
+    padding-right: 1.5em;
+}
+
+.title {
+    float: left;
+    width: 25em;
+}
+
+.upvote {
+    border: 1px solid black;
+    background-color: white;
+    float: left;
+    display: block;
+    width: 1.75em;
+    height: 1.75em;
+}
+
 h1 {
     text-align:center;
-    margin-bottom: 0;
 }
 
 h2 {
     text-align: left;
     text-indent: 1.5em;
+    margin-bottom: 0;
 }
 
 a {
@@ -151,6 +183,11 @@ CSS for user-related forms
     border-radius: 10px;
     background-color: white;
 }
+
+.userForm > input[type=submit]:hover {
+    background-color: #C8FFFF;
+}
+
 /* 
 end of CSS for user-related forms 
 */
