--- a/project/templates/class.html.twig
+++ b/project/templates/class.html.twig
@@ -20,6 +20,7 @@
                 <input type="submit" value="Edit Class">
             </form>
         {% endif %}
+        <h2>Lessons:</h2>
         <div id="lessonaccordion">
             {% for l in lessonList %}
                 <div class="lessonContainer">
@@ -34,31 +35,31 @@
         </form>
         {% endif %}
     </div>
-        <div class="comments">
-        {% if userSession %}
-            <div class="commentForm">
-                <form method="post">
-                <p>Add your Comments:</p>
-                <textarea name="body" cols="100" rows="5">{{c.body}}</textarea>
-                </br>
-                <input type="submit" value="Add Comment">
-                </form>
-            </div>
-            {% if commentsList %}
-                {% for co in commentsList %}
-                    <div class="commentBody">
-                        <span class="commentAuthorInfo"><a href="/profile/{{co.userid}}">{{co.username}}</a> said on {{co.date}}</span>
-                        <hr>
-                        <div>{{co.body}}</div>
-                    </div>
-                {% else %}
-                    <span>Be the first to leave a comment!</span>
-                {% endfor %}
-            {% endif %}
-        {% else %}
-                <p><a href="/login">Login</a> to see comments!</p>
-        {% endif %}
+    <div class="comments">
+    {% if userSession %}
+        <div class="commentForm">
+            <form method="post">
+            <p>Add your Comments:</p>
+            <textarea name="body" cols="100" rows="5">{{c.body}}</textarea>
+            </br>
+            <input type="submit" value="Add Comment">
+            </form>
         </div>
-        </br>
-        <p><a href="/">Back to Home</a></p>
+        {% if commentsList %}
+            {% for co in commentsList %}
+                <div class="commentBody">
+                    <span class="commentAuthorInfo"><a href="/profile/{{co.userid}}">{{co.username}}</a> said on {{co.date}}</span>
+                    <hr>
+                    <div>{{co.body}}</div>
+                </div>
+            {% else %}
+                <span>Be the first to leave a comment!</span>
+            {% endfor %}
+        {% endif %}
+    {% else %}
+            <p><a href="/login">Login</a> to see comments!</p>
+    {% endif %}
+    </div>
+    <br>
+    <p><a href="/">Back to Home</a></p>
 {% endblock %}
