--- a/project/templates/register.html.twig
+++ b/project/templates/register.html.twig
@@ -35,7 +35,7 @@
         {% endfor %}
         </ul>
     {% endif %}
-
+    <h2>Login</h2>
     <form method="post" class="userForm">
 
         <label for="username">Username</label>
