--- a/project/styles.css
+++ b/project/styles.css
@@ -19,7 +19,7 @@ body {
     position: sticky;
     top: 0.5em;
     left: 1em;
-    background-color: lightgoldenrodyellow;
+    background-color: lightsteelblue;
     box-shadow: 0px 2px 2px black;
 }
 
@@ -40,13 +40,13 @@ body {
 }
 
 #menu > li:hover {
-    background-color: #C8FFFF;
+    background-color: whitesmoke;
 }
 
 #content {
     border: 1px solid black;
     border-radius: 30px;
-    background-color: lightgoldenrodyellow;
+    background-color: lightsteelblue;
     width: auto;
     height: auto;
     margin-left: 17.5em;
@@ -59,12 +59,13 @@ body {
     border: 1px solid black;
     border-radius: 30px;
     margin-left: 17.5em;
-    background-color: lightgoldenrodyellow;
+    background-color: lightsteelblue;
     padding: 0.5em 0 0.5em 1em;
     box-shadow: inset 0 0 2px black;
 }
 
 .body {
+    border: 1px solid black;
     background-color: white;
     padding: 1em;
 }
@@ -80,7 +81,7 @@ body {
 }
 
 .class:hover {
-    background-color: #C8FFFF;
+    background-color: whitesmoke;
 }
 
 .comments {
