--- a/project/styles.css
+++ b/project/styles.css
@@ -64,6 +64,10 @@ body {
     box-shadow: inset 0 0 2px black;
 }
 
+.break {
+    clear: both;
+}
+
 .body {
     border: 1px solid black;
     background-color: white;
