--- a/project/templates/addclass_success.html.twig
+++ b/project/templates/addclass_success.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Main Page{% endblock %}
 
 {% block content %}
-    {% for c in list %}
+    {% for c in class %}
     <div class="class">
         <p>Class Added:</p>
         <h1><a href="/class/{{c.classid}}">{{c.name}}</a></h1>
