Not sure what's happening here

--- a/project/templates/addclass_success.html.twig
+++ b/project/templates/addclass_success.html.twig
@@ -6,7 +6,7 @@
     {% for c in class %}
     <div class="class">
         <p>Class Added:</p>
-        <h1><a href="/class/{{c.classid}}">{{c.name}}</a></h1>
+        <h1><a href="/class/{{cl.classid}}">{{cl.name}}</a></h1>
         <p>{{c.body}}</p>
     </div>
     </br>
